Fix document stage styling issue on Firefox

--- a/static/css/kamu.less
+++ b/static/css/kamu.less
@@ -1155,6 +1155,7 @@ main.party-list {
     li {
         float: left;
         margin: 5px 5px 5px 10px;
+        list-style: none;
     }
     .phase {
         background: @gray-light;
@@ -1493,6 +1494,7 @@ main.party-list {
       color: @gray-light;
     }
 }
+
 .tagcloud__reset {
   float: left;
 }
